Improve performance & clarify variable naming
Improved drawing performance by utilizing event delagation, instead of
assigning thousands of individual eventlisteners to each 'pixel'. Also
updated variable and function names to be more contextually precise for
readability.

--- a/style.css
+++ b/style.css
@@ -52,16 +52,17 @@ body {
 .board {
   display: flex;
   width: auto;
-  height: auto;
+  margin: auto;
   background-color: lightblue;
 }
 
 .column {
   display: flex;
   flex-direction: column;
+  flex: 0;
 }
 
-.pixel {
+.tile {
   width: 10px;
   height: 10px;
   background-color: darkslategray;
