--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ body {
   display: flex;
   width: auto;
   margin: auto;
-  background-color: lightblue;
+  background-color: darkslategray;
+  touch-action: none;
 }
 
 .column {
