--- a/css/media-query.css
+++ b/css/media-query.css
@@ -1,9 +1,10 @@
-@media (max-width: 850px) {
+@media ((max-width: 1000px) and (max-height: 1200px)) {
   .container {
     position: relative;
     flex-grow: 1;
     height: 100vh;
     overflow: hidden;
+    margin: 0;
   }
 
   .toolkit {
@@ -16,7 +17,7 @@
   }
 
   .board {
-    transform: scale(4);
+    transform: scale(1);
     overflow: hidden;
   }
 }
