--- a/style.css
+++ b/style.css
@@ -95,12 +95,11 @@ body {
   border-radius: 4px;
 }
 
-button.eraser {
+.toolkit button.eraser {
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -1px;
 }
 
 .colors {
