--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-/* 
-  Custom Properties
-  ==================
-*/
-:root {
-  --eraser-color: #2f4f4f;
-  --red-color: #f00;
-  --green-color: #0f0;
-  --blue-color: #00f;
-  --yellow-color: #ff0;
-  --black-color: #000;
-  --white-color: #fff;
-}
-
 /* Prevent ghost images */
 .noselect {
   -webkit-touch-callout: none !important;
@@ -108,13 +94,6 @@ body {
   gap: 5px;
 }
 
-/* 
-  Colors 
-  =======  
-*/
-.red { background-color: var(--red-color); }
-.blue { background-color: var(--blue-color); }
-.green { background-color: var(--green-color); }
-.yellow { background-color: var(--yellow-color); }
-.black { background-color: var(--black-color); }
-.white { background-color: var(--white-color); }
+button.color {
+  background-color: var(--selected-color);
+}
